--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,9 +20,9 @@
 html {
 	background-color: var(--background);
 	color: var(--text);
-	font-family: sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
 	line-height: 1.6;
-	font-size: 16px;
+	font-size: 17px;
 }
 
 body {
